--- a/src/pdp_bin/Makefile.am
+++ b/src/pdp_bin/Makefile.am
@@ -2,7 +2,6 @@
 #  Process this file with automake to produce Makefile.in
 #*********************************************************
 include $(top_srcdir)/mfstamp.am
-
 PROJNAME = pdp_bin
 DEFS=
 srcdir = @srcdir@
@@ -10,7 +9,6 @@ VPATH = @srcdir@
 
 # pdp++
 bin_PROGRAMS = pdp@PDP_SUFFIX@++
-
 pdp@PDP_SUFFIX@___SOURCES = main.cpp
 
 # toggle creation of ta library. see configure.ac/acsite.m4
@@ -23,14 +21,6 @@ pdp@PDP_SUFFIX@___LDADD =\
 	@abs_top_builddir@/src/pdp_lib/libpdp@PDP_SUFFIX@@PDP_VERSION@.la
 endif
 
-
-pdp@PDP_SUFFIX@___CPPFLAGS =\
-	-I@abs_top_builddir@ \
-	-I@srcdir@/../css \
-	-I@srcdir@/../pdp \
-	-I@srcdir@/../taiqtso \
-	-I@srcdir@/../ta
-
-
+pdp@PDP_SUFFIX@___CPPFLAGS = @PDP_INCLUDES@
 pdp@PDP_SUFFIX@___CXXFLAGS = @OPT_LEVEL@
 
