--- a/src/pdp/Makefile.am
+++ b/src/pdp/Makefile.am
@@ -86,30 +86,16 @@ include $(top_srcdir)/mfstamp.am
 noinst_LTLIBRARIES =\
 	libpdp@PDP_SUFFIX@@PDP_VERSION@.la \
 	libpdpTypeAccess@PDP_SUFFIX@@PDP_VERSION@.la
-
 libpdp@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
-
-libpdp@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS =\
-	-I@srcdir@/../ \
-	-I@abs_top_builddir@ \
-	-I@srcdir@ \
-	-I@srcdir@/../bp \
-	-I@srcdir@/../leabra \
-	-I@srcdir@/../ta \
-	-I@srcdir@/../css \
-	-I@srcdir@/../tamisc \
-	-I@srcdir@/../taiqtso
-
+libpdp@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
 libpdp@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
-
 libpdp@PDP_SUFFIX@@PDP_VERSION@_la_LIBADD =\
 	libpdpTypeAccess@PDP_SUFFIX@@PDP_VERSION@.la
-
 libpdpTypeAccess@PDP_SUFFIX@@PDP_VERSION@_la_SOURCES =\
 	pdp_TA.cpp \
 	pdp_TA_type.h \
 	pdp_TA_inst.h
-
 libpdpTypeAccess@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS = $(libpdp@PDP_SUFFIX@@PDP_VERSION@_la_CPPFLAGS)
-
 libpdpTypeAccess@PDP_SUFFIX@@PDP_VERSION@_la_CXXFLAGS = -g -O0
+
+pdp_def.h:
