--- a/spec.tmpl.in
+++ b/spec.tmpl.in
@@ -1,5 +1,5 @@
 Summary: The PDP++ software is a neural-network simulation system written in C++.
-Name: PDP++
+Name: pdp++
 Version: 3.5
 Release: 0
 License: GPL
