--- a/configure.ac
+++ b/configure.ac
@@ -281,6 +281,9 @@ AC_CONFIG_FILES([Makefile
 		src/leabra/Makefile
 		src/pdp/Makefile
 		src/pdp_lib/Makefile
-		src/pdp_bin/Makefile])
+		src/pdp_bin/Makefile
+		prog_lib/Makefile
+		test/Makefile
+		css_stdlib/Makefile])
 AC_OUTPUT
 SIM_AC_CONFIGURATION_SUMMARY
