dmem compiles!  for some reason all the empty .moc files caused a problem under mpi and not otherwise.  got rid of them from Makefile.am 's

--- a/src/pdp/Makefile.am
+++ b/src/pdp/Makefile.am
@@ -26,14 +26,11 @@ HEADS_GUI =\
 SRCS_GUI =\
 	pdpview_qt.cpp \
 	pdpserver_qt.cpp \
-	pdpserver_qt.moc.cpp \
 	netstru_so.cpp \
 	pdp_qtso.cpp \
-	pdp_qtso.moc.cpp \
 	netstru_qtso.cpp \
 	netstru_qtso.moc.cpp \
-	pdp_program_qtso.cpp  \
-	pdp_program_qtso.moc.cpp 
+	pdp_program_qtso.cpp
 
 endif
 
