--- a/Maketa.am
+++ b/Maketa.am
@@ -46,6 +46,6 @@ MAKETA_FLAGS =\
 	-I@abs_srcdir@/../bp \
 	-I${QTDIR}/include/QtCore
 
-BUILT_SOURCES = ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx
+BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
 
 MAKETA = ../maketa/./maketa
