added LeabraPrjn instead of Projection (needed for relnet stats) -- all previous projects in v.4 are now invalid!  emacs search & repl if desperate.  std test guys are fixed.  initial relnet stuff in place..

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,19 +3,15 @@ pkgdata_testdir = $(pkgdatadir)/test
 dist_pkgdata_test_DATA =\
 	12ax4s_demo.proj \
 	SimpleLines5x5.dtbl \
+	random_assoc_5x5_25.dtbl \
 	hv.v4good_05_20_06_v4_cvt.proj \
 	leabra_startup.css \
 	toaster.jpg \
-	12ax4s_demo_v4.proj \
 	giraffe.jpg \
 	imgproc_test.proj \
-	pdp_v3_cvt \
 	xor.proj \
 	12ax4s_demo_v4_cvt.proj \
 	hv.v4good_05_20_06.proj \
 	leabra_ra.proj \
 	ra3_2.proj \
-	xor_old.proj \
-	hv.v4good_05_20_06_v4.proj \
-	leabra_ra.proj.bkup \
-	ra3_2_v4.proj
+	xor_old.proj
