--- a/Maketa.am
+++ b/Maketa.am
@@ -47,7 +47,10 @@ MAKETA_FLAGS =\
 	-I@abs_srcdir@/../leabra \
 	-I@abs_srcdir@/../taiqtso \
 	-I@abs_srcdir@/../bp \
+	-I/usr/include/qt4/Qt \
 	-I${QTDIR}/include/QtCore
+
+# TODO: Fix above hacky includes
 
 BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
 
