--- a/src/maketa/Makefile.am
+++ b/src/maketa/Makefile.am
@@ -37,8 +37,8 @@ include $(top_srcdir)/mfstamp.am
 
 make_mta_parse:
 	bison -dtvy mta_parse.y;
-	sed -e "s/union/struct/g" y.tab.c >mta_parse.ccx;
-	sed -e "s/union/struct/g" y.tab.h >mta_parse.hx;
+	sed -e "s/union/struct/g" y.tab.c >mta_parse.cpp;
+	sed -e "s/union/struct/g" y.tab.h >mta_parse.h;
 
 ta_TA_type.h ta_TA_inst.h:
 	if [ ! -f ta_TA_type.h ];\
