checkin to fix compiling bugs, but not tested yet

--- a/configure.ac
+++ b/configure.ac
@@ -223,6 +223,7 @@ AC_CHECK_LIB([jpeg],[jpeg_read_header],[LIBS="$LIBS -ljpeg"],[SIM_AC_CONFIGURATI
   AC_DEFINE([TA_USE_QT],,[This switch is set when linking with Qt.])
   AC_DEFINE([TA_USE_INVENTOR],,[This switch is set when compiling for gui and linking with Coin. This switch is really only used in the lowest level files. NOTE: Coin/Inventor is never used when building nogui.])
   AC_DEFINE([QT_SHARED],,[Used in qglobal.h.])
+  AC_DEFINE([HAVE_QT_CONSOLE],,[Used in Unix/Mac, but not Win])
 
   # Tells top-level makefile.am to recurse through src/taiqtso in gui mode
   AC_SUBST([WANT_TAIQTSO],[src/taiqtso])
